--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
 	<title>Melyssa Guerry</title>
 	<style type="text/css">
-	body {background-color: darklue;}
+	body {background-color: darkblue;}
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
