--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
 	<title>Melyssa Guerry</title>
 	<style type="text/css">
-	body {background-color: darkblue;}
+	body {background-color:darkblue;}
+	h2{text-align:center}
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
+	<h2>Melyssa Guerry>
 </body>
 </html>
