--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
 	<title>Melyssa Guerry</title>
 	<style type="text/css">
-	body {background-color:darkblue;}
+	body {background-color:navyblue;}
 	h2{text-align:center}
 	</style>
 </head>
