--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
 	<title>Melyssa Guerry</title>
 	<style type="text/css">
-	body {background-color:navyblue;}
-	h2{text-align:center}
+	body{color:#1e1813;}
+	h2{text-align:center;color:493e3f}
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
