--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
-	<h2>Melyssa Guerry>
+	<h2>Melyssa Guerry
 </body>
 </html>
