--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
 	<title>Melyssa Guerry</title>
 	<style type="text/css">
-	body{color:#1e1813;}
-	h2{text-align:center;color:493e3f}
+	body{color:#474346;}
+	h2{text-align:center;color:oc755b;}
+	a{color:
 	</style>
 </head>
 <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
-	<h2>Melyssa Guerry
+	<h2>Melyssa Guerry</h2>
+	<h3>Learn the solutions to find homes for everyone:</h3>
 </body>
 </html>
