--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
   <title>Melyssa Guerry</title>
   <style type="text/css">
-    body{color:#474346;}
+    body{}
     h2{text-align:center;color:#oc755b;}
     a{color:#1e747c;}
+    h3{color:#474346;}
   </style>
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
