--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Melyssa Guerry</title>
   <style type="text/css">
     body{}
-    h2{text-align:center; color:#oc755b;}
+    h2{text-align:center; color:#0c755b;}
     a{color:#1e747c;}
     h3{color:#474346;}
   </style>
