--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
     <h2>Melyssa Guerry</h2>
     <h3>Learn the solutions to find homes for everyone:</h3>
+    <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a>
   </body>
 </html>
