--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style type="text/css">
     body{}
     h2{text-align:center; color:#0c755b;}
-    a{color:#1e747c;}
+    a{color:#1e747c;font-weight: bold;text-decoration:none;}
     h3{color:#474346;}
   </style>
 </head>
