--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
   <title>Melyssa Guerry</title>
-  <style type="text/css">
-    body{}
-    h1{text-align:center; color:#0c755b;}
-    a{color:#1e747c;font-weight: bold;text-decoration:none;}
-    h2{color:#474346;}
-  </style>
+  <link rel="stylesheet" src="style.css">
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
     <h1>Melyssa Guerry</h2>
