--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=windows-1252"/>
+  <meta charset=“UTF-8”>
+  <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+  <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
+  <link rel=“stylesheet” type=“text/css” href=“style.css”>
   <title>Melyssa Guerry</title>
-  <link rel="stylesheet" src="style.css">
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
     <h1>Melyssa Guerry</h2>
