--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
     <h1>Melyssa Guerry</h2>
-    <h2>Learn the solutions to find homes for everyone:</h3>
+    <h2>End homelessness:</h3>
     <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a>
   </body>
 </html>
