--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset=“UTF-8”>
   <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
   <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-  <link rel="stylesheet" type="text/css" href="https://github.com/melyssaguerry/melyssaguerry.github.io/blob/4455d1a7be6619d0bb02bcd2a8ab52d3884f6c82/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Melyssa Guerry</title>
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
