--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
   <body lang="en-US" link="#000080" vlink="#800000" dir="ltr"><p style="margin-bottom: 0in; line-height: 100%">
     <h1>Melyssa Guerry</h2>
-    <h2>End homelessness:</h3>
-    <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a>
+    <h2>End homelessness:</h2>
+      <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a>
+      <a href="https://www.patreon.com/wetheunhoused">We the Unhoused</a>
+    <h2>About corruption and the dysfunction in politics<h2>
+      <a href="https://thelapod.com/">LA Podcast</a>
   </body>
 </html>
