--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>End homelessness:</h2>
       <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a> -- 
       <a href="https://www.patreon.com/wetheunhoused">We the Unhoused</a>
-    <h2>Politics Dysfunction</h2>
+    <h2>Politics Dysfunction:</h2>
       In LA: <a href="https://thelapod.com/">LA Podcast</a> -- 
   </body>
 </html>
