--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a href="https://twitter.com/CAHousingPod">Gimme Shelter</a> -- 
       <a href="https://www.patreon.com/wetheunhoused">We the Unhoused</a>
     <h2>Politics Dysfunction:</h2>
-      In LA: <a href="https://thelapod.com/">LA Podcast</a> -- 
+    In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a> -- 
+    In LA: <a href="https://thelapod.com/">LA Podcast</a>
   </body>
 </html>
