--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <h2>Politics Dysfunction:</h2>
     In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a> -- 
     In LA: <a href="https://thelapod.com/">LA Podcast</a>
+    
+    
+    <br><br>
+Contact me: my name at gmail
+Give me money: $oceanblueskies
   </body>
 </html>
