--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     In LA: <a href="https://thelapod.com/">LA Podcast</a>
     
     
-    <br><br>
-Contact me: my name at gmail
-Give me money: $oceanblueskies
+  <br><br>
+  Contact me: my name at gmail<br>
+  Support me: $oceanblueskies
   </body>
 </html>
