--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h2>Save wildlife:</h2>
     <a href="https://xerces.org/sites/default/files/publications/18-003_02_Monarch-Nectar-Plant-Lists-FS_web%20-%20Jessa%20Kay%20Cruz.pdf">
       How to help Monarchs (hint: it is mostly not about planting milkweed)</a>  --  
+    <a href="https://www.biologicaldiversity.org/">Biolgical Diversity</a>  --  
+    <a href="https://rewilding.org/">Rewilding</a>
+     
     <h2>Politics Dysfunction:</h2>
     In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a>  --  
     In LA: <a href="https://thelapod.com/">LA Podcast</a>
