--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="https://empower.agency/best-climate-change-newsletters/">Some other great ones</a>
     <h2>Car culture sucks:</h2>
       <a href="https://thewaroncars.org/">War On Cars</a><br>
-    <h2>Politics Dysfunction:</h2>
+    <h2>Politics dysfunction:</h2>
       In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a><br>
       In LA: <a href="https://thelapod.com/">LA Podcast</a>
   <br><br><br><><><><><><><br><br>
