--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a><br>
       In LA: <a href="https://thelapod.com/">LA Podcast</a>
   <br><br><br><><><><><><><br><br>
-  Contact me: my name at gmail<br>
-  Support me: $oceanblueskies
+  Find me me:
+  <br>my name at gmail<br>
+  $oceanblueskies
   </body>
 </html>
