--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       In USA: <a href="https://heathercoxrichardson.substack.com/">Heather Cox Richardson</a><br>
       In LA: <a href="https://thelapod.com/">LA Podcast</a>
   <br><br><br><><><><><><><br><br>
-  Find me me:
+  Find me:
   <br>my name at gmail<br>
   $oceanblueskies
   </body>
