--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <h2>Save wildlife:</h2>
       <a href="https://xerces.org/sites/default/files/publications/18-003_02_Monarch-Nectar-Plant-Lists-FS_web%20-%20Jessa%20Kay%20Cruz.pdf">
       How to help Monarchs (hint: it is mostly not about planting milkweed)</a><br>
-      <a href="https://www.biologicaldiversity.org/">Biolgical Diversity</a><br> 
-      <a href="https://rewilding.org/">Rewilding</a>
+      <a href="https://www.biologicaldiversity.org/">Biolgical Diversity</a><br>
+      <a href="https://rewilding.org/">Rewilding</a><br>
+      <a href="https://store.theodorepayne.org/donations-30848029.html">Native Plants</a>
     <h2>Climate crisis:</h2>
       <a href="https://www.latimes.com/newsletters/boiling-point">Boiling Point</a><br>
       <a href="https://heated.world/">Heated</a><br> 
