--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
   <br><br><br><><><><><><><br><br>
   Find me:
   <br>my name at gmail<br>
-  $oceanblueskies
+  $bluepurpleblack
   </body>
 </html>
