--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       Unfortunately, current events are moving in a direction that may prove this quote correct.
     <br><br><br><><><><><><><br><br>
     </h1>
-    Find me:
-    <br>my name at gmail<br>
+    <br> <a href="https://mastodon.social/@Maxleop">Find me</a><br>
   </body>
 </html>
