--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Unfortunately, current events are moving in a direction that may prove this quote correct.
     <br><br><br><><><><><><><br><br>
     </h1>
-    <br><a href="https://mastodon.social/@Maxleop">Find me here</a>
+    <br><a href="https://linktr.ee/mymundanelife">Find me here</a>
     <br><a href="http://melyssaguerry.weebly.com/">Or here</a>
   </body>
 </html>
